--- a/about.css
+++ b/about.css
@@ -91,7 +91,7 @@ footer {
   padding-left: 20px;
 }
 .paiment i:hover {
-  color: #ff2273;
+  color: #41d3c8;
 }
 #ins:hover {
   color: rgb(255, 0, 157);
@@ -109,7 +109,7 @@ footer {
   color: red;
 }
 .contact-back {
-  background-image: url("images/contact-back.jpg");
+  background-image: url("images/about-back.jpg");
   border-radius: 10px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -127,129 +127,143 @@ footer {
   font-style: oblique;
 }
 .mini-titles h1 {
-  color: #0c645e;
+  color: #0fa79c;
 }
 .mini-titles h4 {
-  color: #03294d;
+  color: #05192c;
   font-weight: 800;
 }
-.container {
+.abt {
   display: flex;
-  margin: 80px 20px;
-  border-radius: 40px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.56);
-  height: 500px;
+  align-items: center;
+  margin: 50px 100px;
 }
-.left {
-  display: flex;
-  flex-direction: column;
-  background-color: #41d3c8;
-  padding-left: 20px;
+.abt img {
   width: 500px;
+  margin-right: 40px;
+  border-radius: 40px;
+  border: 2px solid #41d3c8;
+  box-shadow: 15px 10px 5px rgba(0, 0, 0, 0.36);
 }
-.cor {
+.description {
+  width: 600px;
+}
+.description h1 {
+  color: #41d3c8;
+  font-weight: bold;
+  font-style: italic;
+}
+.description p {
+  font-weight: bold;
+  font-size: large;
+}
+#marq {
+  color: #a69d7d;
+  background-color: #05192c;
+  border-radius: 10px;
+  color: white;
+}
+span {
+  color: #699ac7;
+}
+.advantages {
+  padding-right: 20px;
+  padding-left: 20px;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
 }
-.left h1 {
-  padding-top: 40px;
-  color: #03294d;
+.advantages .adv {
+  width: 180px;
+  height: 150px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 35px rgba(0, 0, 0, 0.06);
+  border: 1px solid #03294d;
+  border-radius: 10px;
+  margin: 15px 10px;
+}
+.advantages img {
+  width: 130px;
+  height: 90px;
+  border: 2px solid #62635f;
+  border-radius: 40px;
+}
+.advantages .adv:hover {
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.25);
+  transform: scale(0.9);
+}
+.advantages h6 {
+  padding: 9px 8px 6px 8px;
+  margin-top: 30px;
+  border-radius: 10px;
+  border: 1px solid mediumaquamarine;
+  background-color: mediumaquamarine;
+}
+#title {
+  text-align: center;
+  color: #3eb3aa;
   font-style: oblique;
   font-weight: bold;
 }
-.left p {
-  font-size: small;
-  color: black;
-  padding-top: 10px;
-}
-.cord {
-  padding-top: 40px;
-}
-.cor {
-  padding-top: 30px;
-}
-.cor h3,
-.cor i {
-  color: #03294d;
-}
-#supp {
-  padding-top: 30px;
-}
-#supp i {
-  color: #104f8a;
-}
-
-.right {
-  margin: 40px;
-}
-form {
-  display: flex;
-  flex-wrap: wrap;
-}
-.right h1 {
-  color: #41d3c8;
+#mission-title {
   text-align: center;
-}
-form label {
   color: #03294d;
-  font-style: oblique;
+  font-style: italic;
   font-weight: 700;
-}
-#btn {
-  height: 40px;
-  width: 150px;
-  color: white;
-  background-color: #03294d;
-  border: none;
-  border-radius: 4px;
-  margin-left: 80px;
-  margin-top: 130px;
-}
-.input-control {
-  display: flex;
-  flex-direction: column;
-  width: 200px;
+  font-size: xx-large;
   margin: 40px;
 }
-.input-control input {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  font-size: 12px;
-  border: 0;
-  border-bottom: 2px solid #41d3c8;
-  background: transparent;
-  outline: none;
-}
-
-textarea {
-  margin-left: 80px;
-  border: 2px solid #41d3c8;
-  border-radius: 10px;
-}
-.map {
-  width: 55%;
-  height: 400px;
-}
-.map iframe {
-  width: 100%;
-  height: 100%;
-  border-radius: 40px;
-  border: 3px solid #62635f;
-}
-.information {
+.mission-container {
   display: flex;
   justify-content: space-around;
+}
+.mission-container p {
+  font-size: large;
+  font-style: oblique;
+  font-weight: 700;
+  width: 600px;
+}
+.mission-container img {
+  width: 30%;
+  height: 190px;
+  border-radius: 50% 40% 90% 0;
+  border: 2px solid #62635f;
+  margin: 0 20px;
+}
+.qotes {
+  margin-top: 80px;
+  width: 300px;
+  margin-left: 40%;
+}
+.qotes p {
+  font-size: x-large;
+  font-style: oblique;
+  color: #04214e;
+}
+.qotes span {
+  font-size: xx-large;
+}
+.app {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
-.input-control .fa {
-  position: relative;
-  bottom: 25px;
-  left: 190px;
-  display: none;
+.app h1 {
+  color: #03294d;
+  filter: drop-shadow(30px 10px 4px #4444dd);
 }
-.fa-times {
-  color: red;
+.app-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
-.fa-check {
-  color: green;
+#vr-img{
+  margin: 40px 20px;
+  border: 3px solid #03294d;
+  border-radius: 40px;
 }
